pods/serve.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: serve
spec:
  replicas: 1
  selector:
    matchLabels:
      app: serve
  template:
    metadata:
      labels:
        app: serve
    spec:
      containers:
        - name: serve
          image: ghcr.io/lightdotso/lightdotso:sha-96cdb97
          command: ["/usr/local/bin/serve"]
          ports:
            - containerPort: 3002
          resources:
            limits:
              cpu: "1500m"
              memory: "512Mi"
            requests:
              cpu: "900m"
              memory: "512Mi"
          securityContext:
            readOnlyRootFilesystem: true
            runAsNonRoot: false
          readinessProbe:
            httpGet:
              path: /health
              port: 3002
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3002
            initialDelaySeconds: 10
            periodSeconds: 30
