pods/service.yml
apiVersion: v1
kind: Service
metadata:
  name: serve
spec:
  selector:
    app: serve
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3002
