pods/serve-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: serve-ingress
spec:
  rules:
    - host: dev.api.light.so
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: serve
                port:
                  number: 3002
